tests/toy/neg/001140_mutation.toylang
program a = { if var a : bool; } .
